Closed Bug 1836597 Opened 3 years ago Closed 3 years ago

livestreams on various austrian broadcasters don't start playing

Categories

(Core :: Audio/Video: Playback, defect)

Firefox 115
defect

Tracking

()

RESOLVED FIXED
116 Branch
Tracking Status
firefox-esr102 --- unaffected
firefox113 --- unaffected
firefox114 --- unaffected
firefox115 + fixed
firefox116 --- verified

People

(Reporter: philipp, Assigned: padenot)

References

(Regression)

Details

(Keywords: regression)

Attachments

(2 files)

on firefox 115 on windows 10 it is no longer possible to watch various livestreams from austrian tv channels of different sorts - the content keeps in a loading state/does not start playing.

some samples affected by this problem:

(i'm not sure if this content is behind a geolock - perhaps it is necessary to use a vpn in order to access them)

this is the range where the bug first appeared, that i came up with with the help of mozregression:
https://hg.mozilla.org/integration/autoland/pushloghtml?fromchange=fa170b66896e1972488dc85979c3df6bd3a07ae6&tochange=f1ecfbba7ed20ecd0284b301ced7f055f4eae575

Set release status flags based on info from the regressing bug 1817997

:padenot, since you are the author of the regressor, bug 1817997, could you take a look? Also, could you set the severity field?

For more information, please visit BugBot documentation.

Flags: needinfo?(padenot)
Assignee: nobody → padenot
Flags: needinfo?(padenot)
Attachment #9337471 - Attachment description: WIP: Bug 1836597 - Properly implement operator== for TimeUnit that overflow int64_t. → Bug 1836597 - Properly implement operator== for TimeUnit that overflow int64_t. r?#media-playback-reviewers,alwu

Thanks for the report, this should work tomorrow (or the day after) in Nightly. Most of the streams we indeed restricted to Austrian IPs, but the Mozilla VPN allows exiting in Vienna, so I ended up being able to debug.

We'll have to uplift this.

Pushed by padenot@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/b5837a86ce2a Add more ToString methods on TimeUnit related classes. r=media-playback-reviewers,chunmin https://hg.mozilla.org/integration/autoland/rev/fd86f83d1b48 Properly implement operator== for TimeUnit that overflow int64_t. r=media-playback-reviewers,chunmin
Status: NEW → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 116 Branch

(In reply to Paul Adenot (:padenot) from comment #5)

We'll have to uplift this.

:padenot could you submit a beta uplift request when ready?

Flags: needinfo?(padenot)

thank you for the quick fix, i can confirm that the issue is resolved in nightly build 20230606040644

Comment on attachment 9337471 [details]
WIP: Bug 1836597 - Properly implement operator== for TimeUnit that overflow int64_t.

Beta/Release Uplift Approval Request

  • User impact if declined: Some websites (especially live TV) have broken video playback.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: Yes
  • Needs manual test from QE?: No
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): This is a trivial problem that happens to be triggered by some live video websites, and is unit tested directly.
  • String changes made/needed: none
  • Is Android affected?: Yes
Attachment #9337471 - Attachment description: Bug 1836597 - Properly implement operator== for TimeUnit that overflow int64_t. r?#media-playback-reviewers,alwu → WIP: Bug 1836597 - Properly implement operator== for TimeUnit that overflow int64_t.
Flags: needinfo?(padenot)
Attachment #9337471 - Flags: approval-mozilla-beta?
Attachment #9337474 - Flags: approval-mozilla-beta?

Comment on attachment 9337471 [details]
WIP: Bug 1836597 - Properly implement operator== for TimeUnit that overflow int64_t.

Approved for 115.0b3.

Attachment #9337471 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

Comment on attachment 9337474 [details]
Bug 1836597 - Add more ToString methods on TimeUnit related classes. r?#media-playback-reviewers,alwu

Approved for 115.0b3.

Attachment #9337474 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: