Bug 1836597 - Add more ToString methods on TimeUnit related classes. r=media-playback-reviewers,chunmin, a=dmeehan

Differential Revision: https://phabricator.services.mozilla.com/D179961